--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ body {
     z-index: 2;
     text-align: left;
     margin-left: 0;
-    padding-left: 20px;
+    padding-left: 0;
 }
 
 .hero-title {
@@ -271,7 +271,7 @@ body {
     max-width: 1000px;
     margin-left: 0;
     margin-right: auto;
-    padding-left: 20px;
+    padding-left: 0;
 }
 
 .search-tabs {
