Add justify-content flex-start to align content to left side

--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,7 @@ body {
     min-height: 700px;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     position: relative;
     transform: scaleX(-1);
 }
