Add Honda CR-V good condition image as third column

--- a/styles.css
+++ b/styles.css
@@ -1337,13 +1337,21 @@ button[type="submit"],
 
 .why-choose-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 80px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
     align-items: start;
 }
 
 .why-choose-left {
-    padding-right: 40px;
+    padding-right: 0;
+}
+
+.why-choose-center {
+    padding: 0;
+}
+
+.why-choose-right {
+    padding-left: 0;
 }
 
 .section-title {
